# mini-ctf

./: Cargo.toml  README.md  port_forward.sh
signature-generator/: Cargo.toml
signature-generator/src/: main.rs
solutions/: padding_oracle.py
src/: main.rs  templates.rs
templates/: 404.html  admin.html  base.html  home.html  message.html  secret.html
web/: Cargo.toml
web/src/: main.rs  templates.rs
web/templates/: admin.html  base.html  home.html  search_users.html  signup.html
