[package]
name = "mini-ctf"
version = "0.1.0"
authors = ["Nils <nils@nilsand.re>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = "0.4.0"
actix-web = "3.3.2"
askama = { version = "0.10.5", features = ["with-actix-web"] }
askama_actix = "0.11.1"
env_logger = "0.8.2"
futures-util = "0.3.12"
sqlx = { version = "0.5.1", features = ["runtime-async-std-native-tls", "sqlite"] }
serde = "1.0.123"
tokio = { version = "1.2.0", features = ["sync"] }
